container fix, footer aligned left

--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,8 @@ body {
 }
 
 #container {
-  border: 2px dashed black;
-  box-shadow: 0 0 40px rgba(0, 0, 0, 0.877);
-  background-color: lightgray;
+  background-color: rgb(255, 255, 255);
   margin: 0 auto;
-  max-width: 1200px;
 }
 
 img {
@@ -33,7 +30,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 15px;
+  padding: 25px 25px;
 }
 
 nav ul {
@@ -145,13 +142,12 @@ aside {
 
 /* Footer */
 footer {
-  background-color: lightgray;
-  border-top: 1px solid black;
-  text-align: center;
-  padding: 25px 0;
+  background-color: rgb(255, 255, 255);
+  border-top: 1px solid rgb(200, 200, 200);
+  text-align: left;
+  padding: 25px 25px;
 }
 
 footer p {
   margin: 0;
-  text-shadow: 2px 2px darkgray;
 }
